--- a/public/styles.css
+++ b/public/styles.css
@@ -26,13 +26,13 @@
 
 html {
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   color: rgba(0,0,0,0.8);
   line-height: 1.65;
 }
 @media screen and (min-width: 58em) {
   html {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
@@ -127,7 +127,9 @@ a:focus {
 img,
 video {
   height: auto;
-  max-width: 100%;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
 }
 
@@ -326,7 +328,7 @@ a[data-fancybox] img {
 
 .home-section {
   background-color: rgb(255, 255, 255);
-  padding: 110px 0 110px 0;
+  padding: 40px 0 40px 0;
   animation: intro 0.3s both;
   animation-delay: 0.15s;
 }
@@ -1117,7 +1119,7 @@ footer a#back_to_top i {
 }
 
 nav#navbar-main li {
-  font-size: 16px;
+  font-size: 12px;
 }
 
 .navbar-default .navbar-nav>li>a,
